@@ -1,3 +1,12 @@
+Sat Mar 23 17:20:00 1996  Sam Hartman  <hartmans@tertius.mit.edu>
+
+	* krcp.c (des_write): Use krb5_net_write instead of write, because
+ 	most parts of rcp that call this code ignore the return value and
+ 	we want to reblock properly.
+
+	* krshd.c (doit): Don't use non-blocking IO; it is unnecessary and
+ 	may cause problems.
+
 Wed Mar 20 19:36:21 1996  Richard Basch  <basch@lehman.com>
 
 	* krlogind.c (recvauth): use the library routines to do v4 to v5
